testnet/k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: fluidic-testnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      containers:
        - name: nginx
          image: us-central1-docker.pkg.dev/project-934c3e12-e0e7-4811-810/fluidic/nginx-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: fluidic-testnet
  annotations:
    cloud.google.com/backend-config: '{"default": "fluidic-api-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: nginx-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
